--- a/index.html
+++ b/index.html
@@ -1,71 +1,125 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-
 <head>
   <meta charset="utf-8">
   <title>jot's personal site</title>
 </head>
-
 <body>
   <table cellspacing="20">
     <tr>
-      <td> <img src="images/campingpic.jpg" alt="my fav pic" /> </td>
+      <td> <img src="images/img.jpg" alt="my fav pic" height="300" width="230"/> </td>
       <td>
-        <h1> Jot khehra</h1>
-        <p> <em>Welcome to my <strong>Website</strong> </em> </p>
-        <p>I love doing outdoor activities such as hiking, camping , playing badminton and many more.</p>
+        <h1> Jot khehra(CSI rep)</h1>
+        <p> <em>Visiting new places, traveling new roads, trying new cuisines and learning about new cultures excites me!</em></p>
+        <p>I am currently working as CSI reprentative for blueocean, Halifax based on splunk Project .<br>
+           We focus on excellent customer service , professional communication and business skills. So<br>
+           proud to be a part of such a great company where there is always something new to learn.
+          </p>
       </td>
     </tr>
   </table>
 
-  <hr size="3">
+  <a href="thirdpage.html">Contact Me</a>
+
+<hr>
+
+
+  <h2>Work experience </h2>
+  <table>
+    <tr>
+    <td>   <b> August 2021 - Present</b></td>
+    </tr>
+    <tr>
+      <td><em>CSI </em>, blueocean ( Splunk)</td>
+    </tr>
+    <tr>
+      <td>
+        As CSI representative, our main motive is to deliver excellent customer service , professional communicatoin and business skills.The idea is to leave a lasting impression on customers by working with them and assisting them in the best way possible. I also believe that excellent customer service involves being an expert on the products sold in order to help people make good decisions.
+    </tr>
+  </table>
+
+<br>
+  <table>
+    <tr>
+      <td>
+        <b>July 2018 - August 2021</b>
+      </td>
+     <tr>
+      <td> <em>Supervisor</em>, Tim Hortons</td>
+      <tr>
+        <td>
+        Complies with and enforces all Tim Hortons operating standards. Ensures all restaurant policies are followed during the shift (e.g. cash policies, meal and break policies, food safety policies). Completes all required shift documentation and follows principles of sanitation and safety in handling food and equipment
+        </p>
+        </td>
+    </tr>
+  </table>
+
+  <table>
+    <tr>
+    <td><b>April 2018 - july 2018</b></td>
+    </tr>
+    <tr>
+      <td><em>Security receptionist</em>,Skanna Systems and investigations </td>
+      <tr>
+        <td>
+        Maintains environment by monitoring and setting building and equipment controls.
+Ask incoming and outgoing visitors to sign a log that includes the time of arrival or departure and the purpose of the visit.
+</td>
+
+      </tr>
+  </table>
+
+<hr>
+
+<h3>Education</h3>
+<table>
+  <tr>
+    <td> <b>September 2017</b></td>
+  </tr>
+  <tr>
+    <td><em>Computer System Technician</em>, Sheridan College </td>
+  </tr>
+  <tr>
+    <td>
+      Graduated with 3 GPA <br>
+      Coursework: - Linux, Project Management, Web Development, Database management, C++, and Java.
+    </td>
+  </tr>
+</table>
+
+
+<hr>
 
   <h3> My Hobbies</h3>
   <ul>
     <li> <strong> <a href="https://koa.com/blog/a-beginners-guide-to-camping-for-the-first-time"> Camping </a></strong> </li>
-
     <li> <strong><a href="https://www.cbc.ca/life/culture/the-beginner-s-guide-to-canoeing-basic-strokes-for-paddling-folks-and-everything-you-need-to-get-started-1.4764093"> Canoening</a></strong></li>
+    <li> <strong> Reading</strong>  </li>
+    <li><strong> Cooking</strong>    </li>
   </ul>
   <hr>
-  <h3>Work experience </h3>
-  <table>
-    <tr>
-      <th>
-        dates
-      </th>
-      <th>
-        work
-      </th>
-    </tr>
-    <tbody>
 
-
-    <tr>
-      <td> 2010-2012 </td>
-      <td> Tim hortons </td>
-
-    </tr>
-    <tr>
-      <td> 2012-2019 </td>
-      <td> CSI rep</td>
-    </tr>
-    <br>
-    <hr>
-  </table>
+  <hr>
+  <a href="secondpage.html"> Personal fav plaves to visit for travelling</a>
   <br>
   <hr>
+
+  <hr>
+
+
+
   <h3>SKILLS</h3>
   <table>
     <tr>
       <td>
-        ios development
+        Communications
       </td>
       <td>
         🗼🗼🗼🗼🗼
       </td>
     <tr>
       <td>
-        photography
+        management skills
       </td>
       <td>
         🗼🗼🗼
@@ -78,19 +132,20 @@
       <td>
         🗼🗼
       </td>
+      <tr>
+        <td>
+          Leadership
+        </td>
+        <td>
+          🗼🗼
+        </td>
       </tbody>
     </tr>
 
 
   </table>
-
-  <hr>
-  <a href="secondpage.html"> Places to visit for camping</a>
   <br>
   <hr>
-  <a href="thirdpage.html">Contact for support</a>
-  <hr>
-
 </body>
 
 </html>
