--- a/secondpage.html
+++ b/secondpage.html
@@ -5,12 +5,17 @@
     <title></title>
   </head>
   <body>
-    <h3>best places to travel</h3>
+    <h3>Personal favourites.</h3>
       <ol>
-      <li><strong><a href="https://canmore.ca/"> canmore </a></strong></li>
-      <li><strong><a href="https://www.pc.gc.ca/en/pn-np/ab/jasper"> jasper</a></strong></li>
+      <li><strong><a href="https://www.pc.gc.ca/en/pn-np/ab/jasper"> <em>jasper,</em>alberta </a></strong></li>
+      <li><strong><a href="https://www.visiticeland.com/"> iceland</strong></a> </li>
+          <li><strong><a href="https://travel.usnews.com/Paris_France/">Paris</strong></a></li>
+              <li><strong><a href="https://bali.com/">  <em>Bali,</em>Indonesia</strong></a></li>
+              <li><strong><a href="https://www.myswitzerland.com/en-ca/microsites/market-us/travel-advisory/">  Switzerland</strong></a></li>
+
+
       </ol>
 
-  
+
   </body>
 </html>
