--- a/thirdpage.html
+++ b/thirdpage.html
@@ -5,19 +5,15 @@
     <title></title>
   </head>
   <body>
-    <p>
-      <a href="https://support.campmanagement.com/hc/en-us"> Click to get camping support</a>
-      </p>
-      <hr>
 <h2>My Personal contact info</h2>
 <p>
-  Name: Jeevanjot
+  Name: Jeevanjot Khehra
 </p>
 <p>
-  phone no: 4379904004
+  Phone no: 4379904004
 </p>
 <p>
-  address:39 circle drive, halifax.
+Email:Khehrajot407@gmail.com
 </p>
   <hr>
 <form action="mailto:khehrajot407@gmail.com" method="post" enctype="text/plain">
